# Honeypot-Project

./: .gitignore  NEW_README.md  analysis.py  pyproject.toml
src/: const.go  context.go  context_test.go  coraza.conf  default.conf  go.mod  go.sum  honeypot.sh  main.go  main_test.go  security_measure.go  security_measure_test.go
src/ManagementFramework/: main.py
src/ManagementFramework/model/: container_config.py  docker_service_manager.py  global_ctx.py  log_ctx.py  security_measure.py  security_measure_manager.py  test_docker_service_manager.py  test_security_measure_manager.py
src/ManagementFramework/utils/: const.py  logger.py  type.py
src/airflow/: extraction.py
src/airflow/dag/: log-monitor.py
src/misp/: docker-compose.yaml
src/utils/container/: container.go  container_test.go
src/utils/logger/: logger.go  logger_test.go
src/waf-honeypots/: docker-compose.yml  exploited_web.go  honeypot_config.json  nginx.conf
test/: collect_performance.py  parse_performance.py
