[tool.poetry]
name = "honeypot-project"
version = "0.1.0"
description = "OWASP Honeypot Project"
authors = ["dextermallo <dextermallo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
requests = "^2.31.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pydantic = "^2.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [".", "./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]