[tool.poetry]
name = "honeypot-project"
version = "0.1.0"
description = "Honeypot Project"
authors = ["dextermallo <dextermallo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^6.1.3"
requests = "^2.31.0"
pytest-cov = "^4.1.0"
gevent = "^22.10.2"
pycountry = "^22.3.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [".", "./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"